# esxtool

./: Cargo.toml  build.rs
src/: binary.rs  main.rs  primitive.rs  samples.rs  stats.rs  trace.rs
src/esx/: color_ref.rs  esx_macro.rs  mod.rs  specialization.rs  util.rs
src/esx/record/: mod.rs  record_flags.rs
src/esx/record/bsgn/: mod.rs
src/esx/record/bsgn/sub_record/: desc.rs  fnam.rs  mod.rs  name.rs  npcs.rs  tnam.rs
src/esx/record/clas/: mod.rs
src/esx/record/clas/sub_record/: auto_calc_flags.rs  cldt.rs  desc.rs  flags.rs  fnam.rs  mod.rs  name.rs
src/esx/record/door/: mod.rs
src/esx/record/door/sub_record/: anam.rs  fnam.rs  mod.rs  modl.rs  name.rs  scri.rs  snam.rs
src/esx/record/fact/: mod.rs
src/esx/record/fact/sub_record/: anam.rs  fadt.rs  flags.rs  fnam.rs  intv.rs  mod.rs  name.rs  rank_data.rs  rnam.rs
src/esx/record/glob/: mod.rs
src/esx/record/glob/sub_record/: fltv.rs  fnam.rs  global_type.rs  mod.rs  name.rs
src/esx/record/gmst/: mod.rs
src/esx/record/gmst/sub_record/: fltv.rs  intv.rs  mod.rs  name.rs  strv.rs
src/esx/record/jour/: mod.rs
src/esx/record/jour/sub_record/: act_.rs  (+9 more)
src/esx/record/ltex/: mod.rs
src/esx/record/mgef/: mod.rs
src/esx/record/misc/: mod.rs
src/esx/record/race/: mod.rs
src/esx/record/regn/: mod.rs
src/esx/record/scpt/: mod.rs
src/esx/record/skil/: mod.rs
src/esx/record/soun/: mod.rs
src/esx/record/stat/: mod.rs
src/esx/record/tes3/: mod.rs
src/esx/record/unknown/: mod.rs
src/esx/record/weap/: mod.rs
src/mwscript/: func_macro.rs  funcs.rs  mod.rs  parser.rs  script.rs
(+75 files in other folders)
