[package]
name = "esxtool"
version = "0.0.1"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "AGPL-3.0+"
build = "build.rs"
edition = "2018"

[dependencies]
bitflags = "1.2"
byteorder = "1.3"
clap = "2.33"
combine = "3.8"
encoding = "0.2"
env_logger = "0.6"
log = "0.4"
phf = "0.7"
seek_bufread = "1.2" #31100

[build-dependencies]
phf_codegen = "0.7"
regex = "1.2"
